app/assets/stylesheets/white_theme/tracks.scss
// assets & tracks same diff ;)

.asset,
.track {
  position: relative;
  overflow: hidden;
  width: 100%;
  margin-top: 1px;
  color: $text_color;
  a,
  a:visited {
    color: $text_color;
    background-color: transparent;
    &:hover {
      text-decoration: underline;
      color: $text_color;
    }
  }
  .button,
  .title {
    float: left;
  }
  .seekbar {
    clear: both;
    height: 9px;
    .loaded {
      overflow: hidden;
      height: 5px;
      padding-top: 2px;
      padding-bottom: 2px;
      background-color: #1F1D04;
    }
    .played {
      height: 5px;
      background-color: #FCA744;
    }
  }
  &:not(.open) {
    .seekbar {
      display: none;
    }
  }
  .asset_top {
    display: flex;
    div.button {
      width: 50px;
      height: 50px;
      background-color: $box_background;
      a {
        display: block;
        width: 50px;
        height: 50px;
        &:hover {
          background-position: -51px 0;
        }
      }
      .sprites-play {
        margin-left: 2px;
      }
      .sprites-pause {
        margin-left: 2px;
      }
    }
  }
  div.title {
    overflow: hidden;
    width: auto;
    height: 40px;
    padding-top: 10px;
    padding-left: 3px;
    background-color: $box_background;

    flex-grow: 1;
    .title_left_column {
      float: left;
      width: auto;
    }
    .title_right_column {
      position: relative;
      float: right;
      height: 100%;
      .counter {
        font-size: 16px;
        font-weight: bold;
        position: absolute;
        right: 14px;
        bottom: 22px;
        text-align: right;
      }
      div.time {
        font-family: $header_font;
        font-size: 12px;
        font-size: 12px;
        font-weight: normal;
        position: absolute;
        right: 15px;
        bottom: 10px;
        display: block;
        text-align: right;
        text-align: right;
        color: #8C8C8C;
      }
    }
    a {
      font-family: $header_font;
      font-size: 16px;
      text-decoration: none;
      color: $text_color;

      -webkit-font-smoothing: antialiased;
    }
    .title_left_column_bottom {
      clear: both;
      a {
        -webkit-font-smoothing: subpixel-antialiased;
      }
    }
    span.by {
      font-size: 12px;
    }
    a.artist {
      font-size: 12px;
    }
    span.track_play,
    span.latest,
    span.popular {
      font-size: 12px;
      margin-left: 20px;
    }
    .listen_count {
      font-size: 11px;
      font-weight: bold;
      position: relative;
      top: -3px;
      margin-left: 5px;
      color: $orange;
    }
  }
  &.even {
    div.button,
    div.title {
      background-color: $box_background_even;
    }
  }
  &.hover,
  &.open {
    div.button,
    div.title {
      background-color: #EEEEEE;
    }
  }
  &.playing {
    div.button,
    div.title {
      background-color: #EEEEEE;
    }
    div.button {
      a {
        background-position: -100px 0;
      }
    }
    div.title {
      div.counter {
        opacity: .99;
        color: $text_color2;
      }
      div.time {
        color: #FECDA6;
      }
    }
  }
}

#single_track {
  h1 {
    font-size: 14px;
    font-weight: bold;
    margin-bottom: 10px;
    color: $text_color;
    text-shadow: none;
  }
  #track_details {
    position: relative;
    display: block;
    padding: 15px 15px 15px 20px;
    background-color: $playlist_box_silver;
    p img {
      max-width: 385px;
    }
  }
  textarea {
    width: 380px;
    margin-top: 10px;
  }
  .seekbar {
    display: block;
    background-color: $playlist_box_silver;
    &:not(.initialized) {
      -webkit-box-sizing: border-box;
         -moz-box-sizing: border-box;
              box-sizing: border-box;
      border-top: 1px solid $body_background;
    }
  }
  &.descriptionless {
    .seekbar {
      background-color: $tab_box_silver;
    }
  }
}

div.track_options {
  display: relative;
  width: 100%;
  height: 32px;
}

#radio_tracks {
  margin-bottom: 3px;
}

.tracks_reveal {
  .tracks_reveal_top {
    display: flex;
    .alonetoner {
      width: 50px;
      height: 50px;
      margin-right: 10px;
      a {
        overflow: hidden;
        width: 50px;
        height: 50px;
      }
      a img {
        width: 50px;
        height: 50px;
        border: 1px solid #9FA28D;
        &.no_border {
          border: none;
        }
      }
    }
    .description {
      font-size: 12px;
      line-height: 17px;
      padding-top: 5px;
      margin-right: 60px;
      .user_description {
        p {
          margin-bottom: 1em;
        }
      }
      p img {
        max-width: 290px;
      }
      p {
        margin-top: 0;
        margin-bottom: 0;
      }
      .description_more p  a {
        font-size: 12px!important;
        font-weight: bold!important;
        margin-bottom: 1em;
        text-decoration: none!important;
      }
      .stats {
        font-family: $header_font;
        font-size: 10px;
        font-weight: normal;
        line-height: 14px;
      }
    }
  }

  textarea {
    width: 98%;
  }
  .tabbed_input {
    width: 360px;
    height: 20px;
    margin-left: 10px;
  }
  .home_page_link {
    text-align: right;
  }
  input.comment_submit {
    background-color: transparent;

    @include default_button();
  }
  .comment_waiting {
    font-size: 14px;
    font-weight: bold;
    position: absolute;
    bottom: 10px;
    left: 19px;
    text-align: center;
    text-align: center;
    color: $orange;
    background-color: $tab_box_silver;
    div.ajax_success,
    div.ajax_fail {
      line-height: 30px;
      height: 30px;
      text-indent: 35px;
      background: transparent image-url('icons/ok.png') no-repeat top left;
    }
    div.ajax_success {
      color: $green;
    }
    div.ajax_fail {
      background: transparent image-url('icons/not_ok.png') no-repeat top left;
    }
  }
  .no_border {
    border: none;
  }
  p {
    color: $text_color;
  }


  .comment_track {
    clear: both;
    margin-top: 20px;
  }
  
  .admin {
    font-size: 10px;
    line-height: 12px;
    padding-top: 20px;
    color: #666666;
  }
  .show_to_admin {
    display: none;
    float: none;
    clear: both;
  }
  .show_to_admin_or_owner {
    display: none;
  }
  .track_links {
    float: right;
    margin-top: 15px;
    margin-bottom: 30px;
  }
}


#single_track .track_links {
  left: -9px;
}

